# PortalDoctor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  run.sh
portal_doctor/: __init__.py  __main__.py  cli.py  main.py  models.py
portal_doctor/diagnostics/: __init__.py  env_detect.py  logs.py  pipewire.py  portals.py  rules.py  services.py
portal_doctor/report/: __init__.py  generator.py
portal_doctor/screencast_test/: __init__.py  xdg_screencast.py
portal_doctor/ui/: __init__.py  fixes_tab.py  main_window.py  overview_tab.py  report_tab.py  screencast_tab.py
tests/: __init__.py  test_env_detect.py  test_portals.py  test_rules.py
